[fix] removed java17 specific function call